# backend/docs/swagger.json
@@ -81,7 +81,46 @@
                 }
             }
         },
-        "/quizset": {
+        "/quizsets/classes/{classCode}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Quiz set"
+                ],
+                "summary": "해당 강의가 가지고 있는 모든 퀴즈 셋을 반환한다",
+                "parameters": [
+                    {
+                        "description": "퀴즈 셋을 조회할 강의의 학수 번호",
+                        "name": "JSON",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.QuizCreateForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "퀴즈 셋 배열",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.QuizSetGetForm"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/quizsets/quizset": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -117,7 +156,7 @@
                 }
             }
         },
-        "/quizset/{quizSetId}/class/{classCode}": {
+        "/quizsets/quizset/{quizSetId}/class/{classCode}": {
             "post": {
                 "description": "퀴즈 셋 고유 아이디와 학수번호를 받아서 클래스의 퀴즈셋 목록에 추가한다.",
                 "consumes": [
@@ -205,7 +244,7 @@
                 }
             }
         },
-        "/quizset/{quizSetId}/quiz/{quizId}": {
+        "/quizsets/quizset/{quizSetId}/quiz/{quizId}": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -246,7 +285,7 @@
                 }
             }
         },
-        "/quizset/{quizsetId}": {
+        "/quizsets/quizset/{quizsetId}": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -280,7 +319,7 @@
                 }
             }
         },
-        "/quizset/{quizsetId}/quiz": {
+        "/quizsets/quizset/{quizsetId}/quiz": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -316,6 +355,43 @@
                     },
                     "400": {
                         "description": "요청이 올바르지 않습니다.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/quizsets/users/{username}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Quiz set"
+                ],
+                "summary": "유저가 만든 모든 퀴즈셋 조회",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "유저 로그인 아이디",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "퀴즈셋목록(배열)",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.QuizSetGetForm"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
                         "schema": {
                             "type": "string"
                         }
@@ -429,43 +505,6 @@
                     },
                     "404": {
                         "description": "USER_NOT_EXIST",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/quizset/{username}": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "유저가 만든 모든 퀴즈셋 조회",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "유저 로그인 아이디",
-                        "name": "username",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "퀴즈셋목록(배열)",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/dto.QuizSetGetForm"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "bad request",
                         "schema": {
                             "type": "string"
                         }
